# gpt-oss

./: .gitignore  README.md  check_all_results.py  check_missing_filler_tokens.py  format_prompt.py  missing_early_answer_report.md  missing_results_report.md  plot_answer_agreement.py  plot_mmlu_results.py  pyproject.toml  run_gpt_oss.py  run_mmlu.py  run_mmlu_early_answer.py  run_mmlu_filler_tokens.py  set_gcc.sh  setup  setup.sh
analysis-scripts/mmlu/early_answer/: compare_answer_changes.py
analysis-scripts/mmlu/filler_tokens/: calculate_accuracy_by_folder.py  plot_accuracy.py
analysis-scripts/mmlu/original/: calculate_original_accuracy.py
analysis-scripts/mmlu/paraphrased_answer/: analyze_paraphrased_results.py
dataset/mmlu/: clone  evaluate.py  experiment_evaluate.py  original_evaluate.py
execute-scripts/mmlu/: README_paraphrase_batch.md  paraphrase_analysis.py  paraphrase_batch_download.py  paraphrase_batch_prepare.py  paraphrase_batch_submit.py  run_missing_tasks.py  run_mmlu.py  run_mmlu_early_answer.py  run_mmlu_early_answer_missing.py  run_mmlu_filler_tokens.py  run_mmlu_paraphrased.py
logs/original/mmlu/: mmlu_results_20251101_104941.jsonl
logs/utils/: result_saver.py
model/: call_gpt_oss.py  early_answer.py  experiment_call.py
results/: mmlu_early_answer_20251030_210139.jsonl  mmlu_early_answer_20251030_210431.jsonl  mmlu_results_20251030_163851.jsonl
results/mmlu/original/: abstract_algebra.jsonl  anatomy.jsonl  astronomy.jsonl  college_biology.jsonl  college_chemistry.jsonl  (+29 more)
utils/: __init__.py  logger.py  read_results.py  result_saver.py
(+1325 files in other folders)
