[project]
name = "gpt-oss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-cpp-python>=0.3.16",
    "openai-harmony>=0.0.4",
    "pandas>=2.3.3",
    "regex>=2025.9.18",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
